[package]
name = "zmq-futures"
version = "0.1.0"
authors = ["Joaquin Rosales <globojorro@gmail.com>"]
readme = "README.md"
repository = "https://github.com/saibatizoku/zmq-futures"

[dependencies]
futures = "0.1"
futures-cpupool = "0.1"
log = "0.3"
zmq = { git = "https://github.com/erickt/rust-zmq" }
